# thc-terminal

./: README.md
commons/: commons.py  conf.py  data_pool.py  gpio_ctrl.py
config_collector/: __init__.py  app.py  change_single_crontab.sh  start.sh
config_server/: app.py  app_client.py  start.sh
data/: config.json  crontab.bak  terminal.db
data_collector/: README.md  app.py  build_msg.py  commons.py  conf.py  data_pool.py  power_ctrl.py  start.sh  uart.py
data_uploader/: README.md  app.py  app_c.py  start.sh
ftp_server/: CMakeLists.txt  app.py  save_img.py  start.sh
ftp_server/include/: ff.h  ftpd.h  wizchip_conf.h
ftp_server/script/: save_img.py
ftp_server/src/: ff.c  ftpd.c  main.c  spi_w5500.c
img_collector/: CMakeLists.txt  README.md  app.py  conclude.py  img_col.sh  save_img.py  start.sh
img_collector/include/: ff.h  ftpd.h
img_collector/src/: ff.c  ftpd.c  loopback.c  main.c  socket.c  w5500.c
img_uploader/: README.md  app.py  app_c.py  start.sh
local_server/: README.md
pi_collector/: README.md  __init__.py  app.py  start.sh
system_test/: config_collector_test.py  data_collector_test.py  data_uploader_test.py  dsp_connection_test.py  img_collector_test.py  net_config_test.py  pi_collector_test.py  power_test.py
wiznet_wrapper/: __init__.py  commons.c  commons.h  dns.c  dns.h  rpi.c  rpi.h  socket.c  socket.h  swig_wrapper.c  swig_wrapper.h  wiznet.i  wiznet_clean.sh  wiznet_make.sh
